<resources>
    <string name="app_name">Memorizer</string>
    <string name="copyright">Copyright 2021. WJSOFT Corp. All Rights Reserved.</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="cardbook">Cardbook</string>
    <string name="my_account">My Account</string>
    <string name="training">Training</string>
    <string name="search">Search</string>
    <string name="save_button_text">Save</string>

    <!--    Alert   -->
    <string name="back_press_alert">Please click BACK again to exit</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="add_cardbook">Add Cardbook</string>
    <string name="reorder">Reorder</string>
    <string name="cardbook_title_hint">Please enter a title.</string>
    <string name="msg_enter_title">Please enter a title.</string>
    <string name="cardbook_back_press_alert_title">Leave Cardbook</string>
    <string name="cardbook_back_press_alert_subtitle">Are you sure want to leave </string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
</resources>